[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "detokenize"
version = "0.0.4"
authors = [
  { name="Littin Rajan", email="littinrajan@gmail.com" },
]
description = "Package to detokenize the stream of tokens"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/littinrajan/detokenize"
"Repository" = "https://github.com/littinrajan/detokenize"
"Bug Tracker" = "https://github.com/littinrajan/detokenize/issues"